Code cleanup.
* Moved jaas formatting methods to SecurityConfigs.

* Cleaned up tests.